--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -8,14 +8,16 @@ body {
 #app {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 #main {
     position: fixed;
     left: 0;
     top: 0;
-}
-
-#app {
-    display: flex;
+    width: 100vw;
+    height: 100vh;
 }
